[gd_scene load_steps=70 format=2]

[ext_resource path="res://Assets/platformer/03-Pig/Idle (34x28).png" type="Texture" id=1]
[ext_resource path="res://Assets/platformer/03-Pig/Run (34x28).png" type="Texture" id=2]
[ext_resource path="res://Assets/platformer/03-Pig/Attack (34x28).png" type="Texture" id=3]
[ext_resource path="res://Assets/platformer/03-Pig/Jump (34x28).png" type="Texture" id=4]
[ext_resource path="res://Assets/platformer/03-Pig/Dead (34x28).png" type="Texture" id=5]
[ext_resource path="res://Creatures/Enemy.gd" type="Script" id=6]
[ext_resource path="res://Creatures/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/platformer/05-Pig Thowing a Bomb/Run (26x26).png" type="Texture" id=8]
[ext_resource path="res://Assets/platformer/05-Pig Thowing a Bomb/Picking Bomb (26x26).png" type="Texture" id=9]
[ext_resource path="res://Assets/platformer/05-Pig Thowing a Bomb/Throwing Boom (26x26).png" type="Texture" id=10]
[ext_resource path="res://Assets/platformer/05-Pig Thowing a Bomb/Idle (26x26).png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 136, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 170, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 78, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 104, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 130, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 156, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 182, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 208, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 234, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 78, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 104, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 130, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 136, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 78, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 78, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 104, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 136, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 204, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 238, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 272, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 306, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 340, 0, 34, 28 )

[sub_resource type="SpriteFrames" id=53]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "BombIdle",
"speed": 10.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Die",
"speed": 10.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "BombRun",
"speed": 10.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "BombPickup",
"speed": 10.0
}, {
"frames": [ SubResource( 36 ) ],
"loop": true,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "BombThrow",
"speed": 10.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=54]
radius = 5.11565
height = 4.59638

[sub_resource type="CircleShape2D" id=55]
radius = 2.47421

[sub_resource type="Animation" id=56]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -10.1281, -7.59608 ), Vector2( -13.263, -15.795 ), Vector2( -9.64582, -23.994 ), Vector2( -10.1281, -6.6315 ), Vector2( -11.8161, -13.263 ), Vector2( -6.87265, -25.9231 ) ]
}

[sub_resource type="Animation" id=57]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11.4544, -5.42577 ), Vector2( 15.9156, -12.9013 ), Vector2( 12.2984, -22.9088 ), Vector2( 12.1778, -8.44009 ), Vector2( 14.3482, -19.2916 ), Vector2( 14.3482, -19.2916 ) ]
}

[sub_resource type="CapsuleShape2D" id=58]
radius = 4.89807
height = 2.81554

[node name="Enemy" type="KinematicBody2D"]
rotation = -0.000500198
scale = Vector2( 1.25, 1.25 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 6 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
frames = SubResource( 53 )
animation = "BombThrow"

[node name="HealthBar" parent="." instance=ExtResource( 7 )]
margin_left = -9.06028
margin_top = -23.4093
margin_right = 22.9397
margin_bottom = -19.4093

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -3.0978, -7.39734 )
shape = SubResource( 54 )

[node name="Walkable" type="Node" parent="."]

[node name="Left" type="RayCast2D" parent="Walkable"]
position = Vector2( -2.5, -6 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 32

[node name="FallLeft" type="RayCast2D" parent="Walkable"]
position = Vector2( -2.5, -6 )
rotation = 1.22173
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 32

[node name="FallRight" type="RayCast2D" parent="Walkable"]
position = Vector2( 8, -6 )
rotation = 5.06145
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 32

[node name="Right" type="RayCast2D" parent="Walkable"]
position = Vector2( 8, -6 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 32

[node name="Collectable" type="Node" parent="."]

[node name="Left" type="RayCast2D" parent="Collectable"]
position = Vector2( 0, -5 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false

[node name="Right" type="RayCast2D" parent="Collectable"]
position = Vector2( 0, -5 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false

[node name="EnemyAttack" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape2D" parent="EnemyAttack"]
position = Vector2( -6.87265, -25.9231 )
shape = SubResource( 55 )
disabled = true

[node name="AttackAnimator" type="AnimationPlayer" parent="EnemyAttack"]
anims/Attack_Left = SubResource( 56 )
anims/Attack_Right = SubResource( 57 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -3.32613, -7.61729 )
shape = SubResource( 58 )

[node name="Timers" type="Node" parent="."]

[node name="JumpTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="SomeTimer" type="Timer" parent="Timers"]
autostart = true

[node name="DeathTimer" type="Timer" parent="Timers"]

[node name="ThrowTimer" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="AttackTimer" type="Timer" parent="Timers"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Timers/JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="Timers/SomeTimer" to="." method="_on_SomeTimer_timeout"]
[connection signal="timeout" from="Timers/DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="Timers/ThrowTimer" to="." method="_on_ThrowTimer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_AttackTimer_timeout"]
